--- a/index.html
+++ b/index.html
@@ -690,32 +690,36 @@
                   <h2 class="heading-primary heading-primary-thin">
                      CHOOSE YOUR EDITION TODAY
                   </h2>
-                  <img class="cart-brush" src="/img/misc/r12.png" alt="Brush" />
+                  <img
+                     class="cart-brush"
+                     src="../img/misc/r12.png"
+                     alt="Brush"
+                  />
                   <div class="grid grid--cols-2 no-gap">
                      <div class="cart">
                         <div class="cart-img first">
                            <img
                               class="cart-logo"
-                              src="/img/logos/cart-logo2.png"
+                              src="../img/logos/cart-logo2.png"
                               alt="Yakuza logo"
                            />
                         </div>
                         <div class="cart-info gap">
                            <img
                               class="check"
-                              src="/img/checkmarks/check1.png"
+                              src="../img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>Base game</span>
                            <img
                               class="check x"
-                              src="/img/checkmarks/x-mark.png"
+                              src="../img/checkmarks/x-mark.png"
                               alt="Checkmark"
                            />
                            <span></span>
                            <img
                               class="check x"
-                              src="/img/checkmarks/x-mark.png"
+                              src="../img/checkmarks/x-mark.png"
                               alt="Checkmark"
                            />
                            <span></span>
@@ -734,26 +738,26 @@
                         <div class="cart-img second">
                            <img
                               class="cart-logo"
-                              src="/img/logos/hero-logo12.png"
+                              src="../img/logos/hero-logo12.png"
                               alt="Yakuza logo"
                            />
                         </div>
                         <div class="cart-info">
                            <img
                               class="check"
-                              src="/img/checkmarks/check1.png"
+                              src="../img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>Base game</span>
                            <img
                               class="check"
-                              src="/img/checkmarks/check1.png"
+                              src="../img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>Limited Edition Steelbook®</span>
                            <img
                               class="check"
-                              src="/img/checkmarks/check1.png"
+                              src="../img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>DLC's</span>
