--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Yakuza site</title>
 
+      <!-- FAV ICON -->
+      <link rel="icon" href="./img/misc/favicon.png" />
+
       <!-- STYLE SHEETS -->
 
       <link rel="stylesheet" href="css/general.css" />
