--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                <a href="#" class="nav-a">
                   <img
                      class="nav-logo large back"
-                     src="img/logos/hero-logo.png"
+                     src="./img/logos/hero-logo.png"
                      alt="Yakuza logo"
                   />
                </a>
@@ -105,7 +105,7 @@
                   <div class="mobile-nav-list">
                      <img
                         class="mobile-logo"
-                        src="img/logos/mobile-logo.png"
+                        src="./img/logos/mobile-logo.png"
                         alt="Yakuza logo"
                      />
 
@@ -154,12 +154,12 @@
             <button class="btn-mobile-nav">
                <img
                   class="icon-mobile-nav burger"
-                  src="img/hamburger/burger2.png"
+                  src="./img/hamburger/burger2.png"
                   alt="Hamburger"
                />
                <img
                   class="icon-mobile-nav close"
-                  src="img/checkmarks/x-mark.png"
+                  src="./img/checkmarks/x-mark.png"
                   alt="X mark"
                />
             </button>
@@ -173,28 +173,28 @@
                   <!-- DESKTOP LOGO -->
                   <img
                      class="hero-logo"
-                     src="img/logos/hero-logo2.png"
+                     src="./img/logos/hero-logo2.png"
                      alt="Main yakuza logo"
                   />
 
                   <!-- MOBILE LOGO -->
                   <img
                      class="hero-logo2"
-                     src="img/logos/hero-logo12.png"
+                     src="./img/logos/hero-logo12.png"
                      alt="Main yakuza logo"
                   />
 
                   <!-- DESKTOP BG -->
                   <img
                      class="hero-img"
-                     src="img/background/hero-bg.jpg"
+                     src="./img/background/hero-bg.jpg"
                      alt="Background image"
                   />
 
                   <!-- MOBILE BG -->
                   <img
                      class="phone-hero-img"
-                     src="img/background/mobile-hero-bg.jpg"
+                     src="./img/background/mobile-hero-bg.jpg"
                      alt="Background image"
                   />
                </div>
@@ -211,7 +211,7 @@
                   >
                      <img
                         class="platform-img"
-                        src="img/logos/ps4-logo.png"
+                        src="./img/logos/ps4-logo.png"
                         alt="Ps4 logo"
                      />
                   </a>
@@ -222,7 +222,7 @@
                   >
                      <img
                         class="platform-img"
-                        src="img/logos/xbox-logo.png"
+                        src="./img/logos/xbox-logo.png"
                         alt="Xbox logo"
                      />
                   </a>
@@ -233,7 +233,7 @@
                   >
                      <img
                         class="platform-img"
-                        src="img/logos/steam-logo.png"
+                        src="./img/logos/steam-logo.png"
                         alt="Steam logo"
                      />
                   </a>
@@ -244,7 +244,7 @@
                   >
                      <img
                         class="platform-img gamepass"
-                        src="img/logos/gamepass-logo.png"
+                        src="./img/logos/gamepass-logo.png"
                         alt="GamePass logo"
                      />
                   </a>
@@ -294,14 +294,14 @@
                   </h2>
                   <img
                      class="brush"
-                     src="img/misc/brush.png"
+                     src="./img/misc/brush.png"
                      alt="Brush stroke"
                   />
                   <div class="feature-cells grid grid--cols-2">
                      <a href="#story" class="feature-cell">
                         <img
                            class="feature-img"
-                           src="img/feature/feature-story.jpg"
+                           src="./img/feature/feature-story.jpg"
                            alt="Jiro holding a pistol"
                         />
                         <div>
@@ -313,7 +313,7 @@
                      <a href="#exploration" class="feature-cell">
                         <img
                            class="feature-img"
-                           src="img/feature/feature-location.jpg"
+                           src="./img/feature/feature-location.jpg"
                            alt="Kamuro at night"
                         />
                         <div>
@@ -325,7 +325,7 @@
                      <a href="#gameplay" class="feature-cell">
                         <img
                            class="feature-img"
-                           src="img/feature/feature-battle3.jpg"
+                           src="./img/feature/feature-battle3.jpg"
                            alt="Battle scene"
                         />
                         <div>
@@ -337,7 +337,7 @@
                      <a href="#cast" class="feature-cell">
                         <img
                            class="feature-img"
-                           src="img/feature/feature-cast.jpg"
+                           src="./img/feature/feature-cast.jpg"
                            alt="Kiryu and Kaoru"
                         />
                         <div>
@@ -392,7 +392,7 @@
                      </h2>
                      <img
                         class="brush-yellow"
-                        src="img/misc/yellow.png"
+                        src="./img/misc/yellow.png"
                         alt="Brush stroke"
                      />
                   </div>
@@ -401,19 +401,19 @@
 
                      <img
                         class="modal-btn modal-btn-open1"
-                        src="img/locations/l1.jpg"
+                        src="./img/locations/l1.jpg"
                         alt="Kamuro"
                      />
 
                      <div class="modal1 hidden">
                         <img
                            class="modal-kamuro"
-                           src="img/locations/l1.jpg"
+                           src="./img/locations/l1.jpg"
                            alt="Kamuro"
                         />
                         <img
                            class="btn-close1"
-                           src="img/checkmarks/x-mark.png"
+                           src="./img/checkmarks/x-mark.png"
                            alt="X mark"
                         />
                      </div>
@@ -428,19 +428,19 @@
 
                      <img
                         class="modal-btn modal-btn-open2"
-                        src="img/locations/l2.jpg"
+                        src="./img/locations/l2.jpg"
                         alt="Sotenbori"
                      />
 
                      <div class="modal2 hidden">
                         <img
                            class="modal-sotenbori"
-                           src="img/locations/l2.jpg"
+                           src="./img/locations/l2.jpg"
                            alt="Sotenbori"
                         />
                         <img
                            class="btn-close2"
-                           src="img/checkmarks/x-mark.png"
+                           src="./img/checkmarks/x-mark.png"
                            alt="X mark"
                         />
                      </div>
@@ -508,7 +508,7 @@
                <div class="main-cast grid grid--cols-2">
                   <img
                      class="main-brush"
-                     src="img/misc/altbrush.png"
+                     src="./img/misc/altbrush.png"
                      alt="Brush"
                   />
                   <div class="main-cast-text">
@@ -541,7 +541,7 @@
                      <div class="slider-container">
                         <img
                            class="pointer pointer-left"
-                           src="img/misc/pointer-left.png"
+                           src="./img/misc/pointer-left.png"
                            alt="Pointer"
                         />
 
@@ -551,7 +551,7 @@
                            <div class="slider-item">
                               <img
                                  class="slider-img"
-                                 src="img/main-cast/kiryu1.jpg"
+                                 src="./img/main-cast/kiryu1.jpg"
                                  alt="Kiryu"
                               />
                            </div>
@@ -561,7 +561,7 @@
                            <div class="slider-item">
                               <img
                                  class="slider-img"
-                                 src="img/main-cast/kiryu2.jpg"
+                                 src="./img/main-cast/kiryu2.jpg"
                                  alt="Kiryu"
                               />
                            </div>
@@ -571,7 +571,7 @@
                            <div class="slider-item">
                               <img
                                  class="slider-img"
-                                 src="img/main-cast/kiryu3.jpg"
+                                 src="./img/main-cast/kiryu3.jpg"
                                  alt="Kiryu"
                               />
                            </div>
@@ -581,7 +581,7 @@
                            <div id="myModal" class="modal">
                               <img
                                  class="btn-close"
-                                 src="img/checkmarks/x-mark.png"
+                                 src="./img/checkmarks/x-mark.png"
                                  alt="X mark"
                               />
 
@@ -591,24 +591,24 @@
 
                         <img
                            class="pointer pointer-right"
-                           src="img/misc/pointer-right.png"
+                           src="./img/misc/pointer-right.png"
                            alt="Pointer"
                         />
                      </div>
                      <div class="black-dots">
                         <img
                            class="black-dot dot1"
-                           src="img/misc/black-dot.png"
+                           src="./img/misc/black-dot.png"
                            alt="Black dot"
                         />
                         <img
                            class="black-dot dot2 current-dot"
-                           src="img/misc/black-dot.png"
+                           src="./img/misc/black-dot.png"
                            alt="Black dot"
                         />
                         <img
                            class="black-dot dot3"
-                           src="img/misc/black-dot.png"
+                           src="./img/misc/black-dot.png"
                            alt="Black dot"
                         />
                      </div>
@@ -616,7 +616,7 @@
 
                   <img
                      class="main-img"
-                     src="img/background/main-cast-img.png"
+                     src="./img/background/main-cast-img.png"
                      alt="Kiryu"
                   />
                </div>
@@ -812,7 +812,7 @@
                </h2>
                <img
                   class="ybrush"
-                  src="img/misc/ybrush.png"
+                  src="./img/misc/ybrush.png"
                   alt="Yellow brush"
                />
                <div class="cta-box container">
@@ -851,7 +851,7 @@
                   </div>
                   <img
                      class="cta-img"
-                     src="img/background/cta-image.jpg"
+                     src="./img/background/cta-image.jpg"
                      alt="Kiryu"
                   />
                </div>
@@ -868,7 +868,7 @@
                   >
                      <img
                         class="yakuza7-logo"
-                        src="img/logos/yakuza7-logo.png"
+                        src="./img/logos/yakuza7-logo.png"
                         alt="Yakuza: Like a Dragon"
                      />
                   </a>
@@ -878,7 +878,7 @@
                   >
                      <img
                         class="ishin-logo"
-                        src="img/logos/ishin-logo.png"
+                        src="./img/logos/ishin-logo.png"
                         alt="Like a Dragon: Ishin"
                      />
                   </a>
@@ -888,7 +888,7 @@
                   >
                      <img
                         class="judgment-logo"
-                        src="img/logos/judgment-logo.png"
+                        src="./img/logos/judgment-logo.png"
                         alt="Judgment"
                      />
                   </a>
@@ -898,7 +898,7 @@
                   >
                      <img
                         class="gaiden-logo"
-                        src="img/logos/gaiden-logo.png"
+                        src="./img/logos/gaiden-logo.png"
                         alt="Gaiden"
                      />
                   </a>
@@ -932,12 +932,12 @@
                <div class="footer-logos">
                   <img
                      class="sega-logo"
-                     src="img/logos/sega-logo.png"
+                     src="./img/logos/sega-logo.png"
                      alt="Sega logo"
                   />
                   <img
                      class="developer-logo"
-                     src="img/logos/dev-logo.png"
+                     src="./img/logos/dev-logo.png"
                      alt="Developer logo"
                   />
                </div>
