--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                   </h2>
                   <img
                      class="cart-brush"
-                     src="../img/misc/r12.png"
+                     src="./img/misc/r12.png"
                      alt="Brush"
                   />
                   <div class="grid grid--cols-2 no-gap">
@@ -703,26 +703,26 @@
                         <div class="cart-img first">
                            <img
                               class="cart-logo"
-                              src="../img/logos/cart-logo2.png"
+                              src="./img/logos/cart-logo2.png"
                               alt="Yakuza logo"
                            />
                         </div>
                         <div class="cart-info gap">
                            <img
                               class="check"
-                              src="../img/checkmarks/check1.png"
+                              src="./img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>Base game</span>
                            <img
                               class="check x"
-                              src="../img/checkmarks/x-mark.png"
+                              src="./img/checkmarks/x-mark.png"
                               alt="Checkmark"
                            />
                            <span></span>
                            <img
                               class="check x"
-                              src="../img/checkmarks/x-mark.png"
+                              src="./img/checkmarks/x-mark.png"
                               alt="Checkmark"
                            />
                            <span></span>
@@ -741,26 +741,26 @@
                         <div class="cart-img second">
                            <img
                               class="cart-logo"
-                              src="../img/logos/hero-logo12.png"
+                              src="./img/logos/hero-logo12.png"
                               alt="Yakuza logo"
                            />
                         </div>
                         <div class="cart-info">
                            <img
                               class="check"
-                              src="../img/checkmarks/check1.png"
+                              src="./img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>Base game</span>
                            <img
                               class="check"
-                              src="../img/checkmarks/check1.png"
+                              src="./img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>Limited Edition Steelbook®</span>
                            <img
                               class="check"
-                              src="../img/checkmarks/check1.png"
+                              src="./img/checkmarks/check1.png"
                               alt="Checkmark"
                            />
                            <span>DLC's</span>
